90 mins and WC Playoffs models

--- a/models/baseline_model.ipynb
+++ b/models/baseline_model.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,8 @@
    "outputs": [],
    "source": [
     "train = pd.read_csv('../data/cleaned/train_final.csv')\n",
-    "test = pd.read_csv('../data/cleaned/test_final.csv')\n"
+    "test = pd.read_csv('../data/cleaned/test_final.csv')\n",
+    "wc_playoffs_train = pd.read_csv('../data/cleaned/wc_playoffs_final.csv')"
    ]
   },
   {
@@ -204,7 +205,8 @@
    "outputs": [],
    "source": [
     "train = train[['home_win', 'rank_diff', 'attack_diff', 'defence_diff', 'midfield_diff', 'overall_diff']]\n",
-    "test = test[['home_win', 'rank_diff', 'attack_diff', 'defence_diff', 'midfield_diff', 'overall_diff']]"
+    "test = test[['home_win', 'home_win_no_pk', 'rank_diff', 'attack_diff', 'defence_diff', 'midfield_diff', 'overall_diff']]\n",
+    "wc_train = wc_playoffs_train[['home_win', 'rank_diff', 'attack_diff', 'defence_diff', 'midfield_diff', 'overall_diff']]"
    ]
   },
   {
@@ -220,7 +222,10 @@
     "y_validation = X_validation['home_win'].ravel()\n",
     "X_validation = X_validation.drop(['home_win'], axis = 1).values\n",
     "y_test = test['home_win'].ravel()\n",
-    "X_test = test.drop(['home_win'], axis = 1).values"
+    "y_test_no_pk = test['home_win_no_pk'].ravel()\n",
+    "X_test = test.drop(['home_win', 'home_win_no_pk'], axis = 1).values\n",
+    "y_wc = wc_train['home_win'].ravel()\n",
+    "X_wc = wc_train.drop(['home_win'], axis = 1).values"
    ]
   },
   {
@@ -469,9 +474,9 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    5.9s\n",
-      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   20.9s\n",
-      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   27.9s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    6.7s\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   25.5s\n",
+      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   35.5s finished\n"
      ]
     }
    ],
@@ -534,9 +539,9 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    3.5s\n",
-      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   16.7s\n",
-      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   21.0s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    4.5s\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   18.9s\n",
+      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   23.5s finished\n"
      ]
     }
    ],
@@ -696,21 +701,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For the best Model, Logistic Regression, the test accuracy is 0.594\n"
+      "For the best Model, Logistic Regression, the test accuracy is 0.562 at 90 mins\n",
+      "For the best Model, Logistic Regression, the test accuracy is 0.594 at end (Softmax)\n",
+      "For the best Model, Logistic Regression, the test accuracy is 0.578 at end (WC Playoff Model)\n"
      ]
     }
    ],
    "source": [
+    "wc_model = LogisticRegressionCV(solver = 'lbfgs', max_iter = 5000, cv = 5, multi_class='multinomial').fit(X_wc, y_wc)\n",
     "test_pred = predict_test_data(X_test, df_result.loc[model_name].model)\n",
+    "test_pred_playoff = predict_test_data(X_test, df_result.loc[model_name].model, False, wc_model)\n",
     "test_score = accuracy_score(y_test, test_pred)\n",
-    "print(\"For the best Model, {}, the test accuracy is {:.3f}\".format(model_name, test_score))"
+    "test_score_playoff = accuracy_score(y_test, test_pred_playoff)\n",
+    "test_score_no_pk = df_result.loc[model_name].model.score(X_test, y_test_no_pk)\n",
+    "print(\"For the best Model, {}, the test accuracy is {:.3f} at 90 mins\".format(model_name, test_score_no_pk))\n",
+    "print(\"For the best Model, {}, the test accuracy is {:.3f} at end (Softmax)\".format(model_name, test_score))\n",
+    "print(\"For the best Model, {}, the test accuracy is {:.3f} at end (WC Playoff Model)\".format(model_name, test_score_playoff))"
    ]
   },
   {
@@ -724,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
