--- a/models/beyond_baseline.ipynb
+++ b/models/beyond_baseline.ipynb
@@ -45,7 +45,8 @@
    "outputs": [],
    "source": [
     "train = pd.read_csv('../data/cleaned/train_final.csv')\n",
-    "test = pd.read_csv('../data/cleaned/test_final.csv')"
+    "test = pd.read_csv('../data/cleaned/test_final.csv')\n",
+    "wc_playoffs_train = pd.read_csv('../data/cleaned/wc_playoffs_final.csv')"
    ]
   },
   {
@@ -78,7 +79,8 @@
     "           'score_conceded_past_1_games_diff']\n",
     "\n",
     "train = train[columns + ['home_win']]\n",
-    "test = test[columns  + ['home_win']]"
+    "wc_train = wc_playoffs_train[columns + ['home_win']]\n",
+    "test = test[columns  + ['home_win', 'home_win_no_pk']]"
    ]
   },
   {
@@ -95,7 +97,10 @@
     "y_valid= X_valid['home_win'].ravel()\n",
     "X_valid = X_valid.drop(['home_win'], axis = 1)\n",
     "y_test = test['home_win'].ravel()\n",
-    "X_test = test.drop(['home_win'], axis = 1)\n"
+    "y_test_no_pk = test['home_win_no_pk'].ravel()\n",
+    "X_test = test.drop(['home_win', 'home_win_no_pk'], axis = 1)\n",
+    "y_wc = wc_train['home_win'].ravel()\n",
+    "X_wc = wc_train.drop(['home_win'], axis = 1)"
    ]
   },
   {
@@ -477,8 +482,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Train Score: 0.5853658536585366\n",
-      "Random Forest Validation Score 0.531578947368421\n"
+      "Random Forest Train Score: 0.5510876730388925\n",
+      "Random Forest Validation Score 0.5394736842105263\n"
      ]
     }
    ],
@@ -524,8 +529,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XGBoost Train Score: 0.5853658536585366\n",
-      "XGBoost Validation Score 0.531578947368421\n"
+      "XGBoost Train Score: 0.5510876730388925\n",
+      "XGBoost Validation Score 0.5394736842105263\n"
      ]
     }
    ],
@@ -590,8 +595,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>0.585366</td>\n",
-       "      <td>0.531579</td>\n",
+       "      <td>0.551088</td>\n",
+       "      <td>0.539474</td>\n",
        "      <td>RandomizedSearchCV(cv=5, error_score='raise-de...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -609,7 +614,7 @@
        "Logistic Regression    0.510877         0.526316   \n",
        "LDA                    0.524061         0.547368   \n",
        "QDA                    0.513514         0.405263   \n",
-       "Random Forest          0.585366         0.531579   \n",
+       "Random Forest          0.551088         0.539474   \n",
        "XGBoost                0.575478         0.536842   \n",
        "\n",
        "                                                                 model  \n",
@@ -651,21 +656,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For the best Model, LDA, the test accuracy is 0.656\n"
+      "For the best Model, LDA, the test accuracy is 0.625 at 90 mins\n",
+      "For the best Model, LDA, the test accuracy is 0.656 at end (Softmax)\n",
+      "For the best Model, LDA, the test accuracy is 0.625 at end (WC Playoff Model)\n"
      ]
     }
    ],
    "source": [
+    "wc_model = LogisticRegressionCV(solver = 'lbfgs', max_iter = 5000, cv = 5, multi_class='multinomial').fit(X_wc, y_wc)\n",
     "test_pred = predict_test_data(X_test, df_result.loc[model_name].model)\n",
+    "test_pred_playoff = predict_test_data(X_test, df_result.loc[model_name].model, False, wc_model)\n",
     "test_score = accuracy_score(y_test, test_pred)\n",
-    "print(\"For the best Model, {}, the test accuracy is {:.3f}\".format(model_name, test_score))"
+    "test_score_playoff = accuracy_score(y_test, test_pred_playoff)\n",
+    "test_score_no_pk = df_result.loc[model_name].model.score(X_test, y_test_no_pk)\n",
+    "print(\"For the best Model, {}, the test accuracy is {:.3f} at 90 mins\".format(model_name, test_score_no_pk))\n",
+    "print(\"For the best Model, {}, the test accuracy is {:.3f} at end (Softmax)\".format(model_name, test_score))\n",
+    "print(\"For the best Model, {}, the test accuracy is {:.3f} at end (WC Playoff Model)\".format(model_name, test_score_playoff))\n"
    ]
   },
   {
@@ -691,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,14 +730,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stacking Model Train Score: 0.5589980224126566\n",
+      "Stacking Model Train Score: 0.5517468688200395\n",
       "Stacking Model Validation Score: 0.5342105263157895\n"
      ]
     }
@@ -740,14 +753,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stacking Model Test Score: 0.625\n"
+      "Stacking Model Test Score at 90 mins: 0.625\n",
+      "Stacking Model Test Score at end (Softmax): 0.640625\n",
+      "Stacking Model Test Score at end (WC Playoff Model): 0.625\n"
      ]
     }
    ],
@@ -755,8 +770,18 @@
     "stack_model_test_pred_prob = stack_model_predict(models, stack_model, X_test, True)\n",
     "stack_model_test_pred = [np.where(np.argsort(val) == 1)[0][0]-1 if (i >= 48) & (np.argmax(val) == 1)\n",
     "                       else np.argmax(val)-1 for i, val in enumerate(stack_model_test_pred_prob)]\n",
+    "stack_model_test_pred_wc_model = [np.argmax(val) - 1 for val in stack_model_test_pred_prob[:48]] +\\\n",
+    "                                list(wc_model.predict(X_test[48:]))\n",
+    "                                    \n",
+    "\n",
     "stack_model_test_acc = accuracy_score(y_test, stack_model_test_pred)\n",
-    "print(\"Stacking Model Test Score: {}\".format(stack_model_test_acc))"
+    "stack_model_test_acc_no_pk = accuracy_score(y_test_no_pk, stack_model_predict(models, stack_model, X_test))\n",
+    "stack_model_test_acc_wc_model = accuracy_score(y_test, stack_model_test_pred_wc_model)\n",
+    "\n",
+    "\n",
+    "print(\"Stacking Model Test Score at 90 mins: {}\".format(stack_model_test_acc_no_pk))\n",
+    "print(\"Stacking Model Test Score at end (Softmax): {}\".format(stack_model_test_acc))\n",
+    "print(\"Stacking Model Test Score at end (WC Playoff Model): {}\".format(stack_model_test_acc_wc_model))\n"
    ]
   },
   {
@@ -777,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,6 +812,7 @@
     "X_train_scaled = scaler.transform(X_train)\n",
     "X_valid_scaled = scaler.transform(X_valid)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
+    "X_wc_scaled = scaler.transform(X_wc)\n",
     "\n",
     "# PCA on data\n",
     "pca = PCA().fit(X_train_scaled)\n",
@@ -796,32 +822,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "pcr_train_score = []\n",
     "pcr_valid_score = []\n",
-    "pcr_test_score = []\n",
+    "pcr_wc_score = []\n",
     "\n",
     "for i in np.arange(1, X_train.shape[1]):\n",
     "    pca_cv = PCA(n_components=i).fit(X_train_scaled)\n",
     "    X_train_pca_cv = pca_cv.transform(X_train_scaled)\n",
     "    X_valid_pca_cv = pca_cv.transform(X_valid_scaled)\n",
     "    X_test_pca_cv = pca_cv.transform(X_test_scaled)\n",
-    "    \n",
+    "    X_wc_pca = pca_cv.transform(X_wc_scaled)\n",
     "    pcr_cv_mod = LogisticRegressionCV(solver = 'lbfgs', \n",
     "                                      max_iter = 5000, \n",
     "                                      cv = 5, \n",
     "                                      multi_class='multinomial').fit(X_train_pca_cv, y_train)\n",
     "    \n",
+    "    pcr_wc_mod = LogisticRegressionCV(solver = 'lbfgs', \n",
+    "                                      max_iter = 5000, \n",
+    "                                      cv = 5, \n",
+    "                                      multi_class='multinomial').fit(X_wc_pca, y_wc)\n",
+    "    \n",
+    "    \n",
     "    pcr_train_score.append(pcr_cv_mod.score(X_train_pca_cv, y_train))\n",
-    "    pcr_valid_score.append(pcr_cv_mod.score(X_valid_pca_cv, y_valid))"
+    "    pcr_valid_score.append(pcr_cv_mod.score(X_valid_pca_cv, y_valid))\n",
+    "    pcr_wc_score.append(pcr_wc_mod.score(X_wc_pca, y_wc))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,16 +910,20 @@
     "X_train_pca_best = pca_best.transform(X_train_scaled)\n",
     "X_valid_pca_best = pca_best.transform(X_valid_scaled)\n",
     "\n",
+    "X_wc_pca_best = pca_best.transform(X_wc_scaled)\n",
+    "\n",
+    "\n",
     "# fit models\n",
     "pcr_best_mod = LogisticRegressionCV(solver = 'lbfgs', \n",
     "                                    max_iter = 5000, \n",
     "                                    cv = 5, \n",
-    "                                    multi_class='multinomial').fit(X_train_pca_best, y_train)"
+    "                                    multi_class='multinomial').fit(X_train_pca_best, y_train)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -910,23 +947,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PCR (Best) Test Score: 0.65625\n"
+      "PCR (Best) Test Score at 90 mins: 0.625\n",
+      "PCR (Best) Test Score at end (Softmax): 0.65625\n",
+      "PCR (Best) Test Score at end (WC Playoffs Model): 0.6875\n"
      ]
     }
    ],
    "source": [
     "# test set\n",
+    "pca_best_com_wc = np.argmax(pcr_wc_score)+1\n",
+    "pca_best_wc = PCA(n_components=pca_best_com_wc).fit(X_wc_scaled)\n",
+    "X_wc_pca_best = pca_best_wc.transform(X_wc_scaled)\n",
+    "\n",
+    "pca_wc_mod = LogisticRegressionCV(solver = 'lbfgs', \n",
+    "                                    max_iter = 5000, \n",
+    "                                    cv = 5, \n",
+    "                                    multi_class='multinomial').fit(X_wc_pca_best, y_wc)\n",
     "X_test_pca_best = pca_best.transform(X_test_scaled)\n",
+    "X_test_pca_best_wc = pca_best_wc.transform(X_test_scaled)\n",
     "pcr_best_test_pred = predict_test_data(X_test_pca_best, pcr_best_mod)\n",
+    "pcr_best_test_pred_wc_model = list(pcr_best_mod.predict(X_test_pca_best[:48])) + list(pca_wc_mod.predict(X_test_pca_best_wc[48:]))\n",
     "pcr_best_test_acc = accuracy_score(y_test, pcr_best_test_pred)\n",
-    "print(\"PCR (Best) Test Score: {}\".format(pcr_best_test_acc))"
+    "pcr_best_test_acc_no_pk = pcr_best_mod.score(X_test_pca_best, y_test_no_pk)\n",
+    "pcr_best_test_acc_wc_model = accuracy_score(y_test, pcr_best_test_pred_wc_model)\n",
+    "\n",
+    "print(\"PCR (Best) Test Score at 90 mins: {}\".format(pcr_best_test_acc_no_pk))\n",
+    "print(\"PCR (Best) Test Score at end (Softmax): {}\".format(pcr_best_test_acc))\n",
+    "print(\"PCR (Best) Test Score at end (WC Playoffs Model): {}\".format(pcr_best_test_acc_wc_model))"
    ]
   },
   {
@@ -938,34 +992,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "lb = LabelBinarizer()\n",
-    "y_train_lb = lb.fit_transform(y_train)"
+    "y_train_lb = lb.fit_transform(y_train)\n",
+    "y_wc_lb = lb.fit_transform(y_wc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "plsda_train_score = []\n",
     "plsda_valid_score = []\n",
+    "plsda_wc_score = []\n",
+    "\n",
     "\n",
     "for i in np.arange(1, X_train.shape[1]):\n",
     "    plsda_mod = PLSRegression(n_components=i, scale=False) \n",
     "    plsda_mod.fit(X_train_scaled, y_train_lb)\n",
     "\n",
     "    plsda_train_score.append(accuracy_score(y_train, np.argmax(plsda_mod.predict(X_train_scaled), axis=1) - 1))\n",
-    "    plsda_valid_score.append(accuracy_score(y_valid, np.argmax(plsda_mod.predict(X_valid_scaled), axis=1) - 1))"
+    "    plsda_valid_score.append(accuracy_score(y_valid, np.argmax(plsda_mod.predict(X_valid_scaled), axis=1) - 1))\n",
+    "    \n",
+    "    #When there are only two labels, >0 means class 1 have higher probability\n",
+    "    plsda_mod_wc = PLSRegression(n_components=i, scale=False) \n",
+    "    plsda_mod_wc.fit(X_wc_scaled, y_wc_lb)\n",
+    "    plsda_wc_score.append(accuracy_score(y_wc, list(np.where(plsda_wc_mod.predict(X_wc_scaled) > 0, 1, -1))))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1046,22 +1108,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PLS-DA (Best) Test Score: 0.671875\n"
+      "PLS-DA (Best) Test Score: 0.625\n",
+      "PLS-DA (Best) Test Score: 0.671875\n",
+      "PLS-DA (Best) Test Score: 0.640625\n"
      ]
     }
    ],
    "source": [
+    "plsda_best_com_wc = np.argmax(plsda_wc_score)+1\n",
+    "\n",
+    "\n",
+    "plsda_wc_mod = PLSRegression(n_components=plsda_best_com_wc, scale=False).fit(X_wc_scaled, y_wc_lb)\n",
+    "\n",
     "plsda_best_test_pred = [np.where(np.argsort(val) == 1)[0][0]-1 if (i >= 48) & (np.argmax(val) == 1)\n",
     "                       else np.argmax(val)-1 for i, val in enumerate(plsda_mod.predict(X_test_scaled))]\n",
     "\n",
-    "print(\"PLS-DA (Best) Test Score: {}\".format(accuracy_score(y_test, plsda_best_test_pred)))"
+    "plsda_best_test_pred_wc = [np.argmax(val)-1 for val in plsda_mod.predict(X_test_scaled[:48])] +\\\n",
+    "                        list(np.where(plsda_wc_mod.predict(X_test_scaled[48:]) > 0, 1, -1))\n",
+    "\n",
+    "print(\"PLS-DA (Best) Test Score at 90 mins: {}\".format(accuracy_score(y_test_no_pk, np.argmax(plsda_mod.predict(X_test_scaled), axis=1) - 1)))\n",
+    "print(\"PLS-DA (Best) Test Score at end (Softmax): {}\".format(accuracy_score(y_test, plsda_best_test_pred)))\n",
+    "print(\"PLS-DA (Best) Test Score (WC Playoffs Model): {}\".format(accuracy_score(y_test, plsda_best_test_pred_wc)))"
    ]
   },
   {
