Momentum accounting for opponent's rating

--- a/models/baseline_model.ipynb
+++ b/models/baseline_model.ipynb
@@ -70,17 +70,22 @@
        "       'bup_dribbling_diff', 'bup_passing_diff', 'bup_speed_diff',\n",
        "       'cc_crossing_diff', 'cc_passing_diff', 'cc_shooting_diff',\n",
        "       'd_aggresion_diff', 'd_pressure_diff', 'd_width_diff', 'home_win',\n",
-       "       'gdp_diff', 'is_home', 'raw_gdp_diff', 'prev_champ',\n",
-       "       'score_past_2_games_diff', 'score_conceded_past_5_games_diff',\n",
-       "       'score_past_4_games_diff', 'wins_past_2_games_diff',\n",
+       "       'gdp_diff', 'is_home', 'raw_gdp_diff', 'score_past_2_games_diff',\n",
+       "       'score_past_4_games_diff', 'y_rating',\n",
+       "       'score_conceded_past_1_games_diff', 'win_momentum_past_5_games_diff',\n",
+       "       'score_conceded_past_4_games_diff', 'wins_past_3_games_diff',\n",
+       "       'wins_past_5_games_diff', 'wins_home_against_away_1_games',\n",
        "       'score_past_3_games_diff', 'wins_past_4_games_diff',\n",
-       "       'score_conceded_past_3_games_diff', 'score_conceded_past_1_games_diff',\n",
-       "       'score_past_1_games_diff', 'score_conceded_past_4_games_diff',\n",
-       "       'score_past_5_games_diff', 'wins_home_against_away_3_games',\n",
-       "       'wins_past_3_games_diff', 'wins_past_1_games_diff',\n",
-       "       'wins_home_against_away_2_games', 'wins_home_against_away_4_games',\n",
-       "       'wins_past_5_games_diff', 'wins_home_against_away_5_games',\n",
-       "       'wins_home_against_away_1_games', 'score_conceded_past_2_games_diff'],\n",
+       "       'win_momentum_past_2_games_diff', 'score_conceded_past_3_games_diff',\n",
+       "       'x_rating', 'score_past_1_games_diff', 'wins_home_against_away_3_games',\n",
+       "       'win_momentum_past_1_games_diff', 'wins_home_against_away_4_games',\n",
+       "       'score_conceded_past_2_games_diff', 'wins_past_2_games_diff',\n",
+       "       'lose_momentum_past_1_games_diff', 'lose_momentum_past_4_games_diff',\n",
+       "       'score_past_5_games_diff', 'lose_momentum_past_5_games_diff',\n",
+       "       'lose_momentum_past_2_games_diff', 'win_momentum_past_4_games_diff',\n",
+       "       'win_momentum_past_3_games_diff', 'wins_past_1_games_diff',\n",
+       "       'wins_home_against_away_2_games', 'wins_home_against_away_5_games',\n",
+       "       'score_conceded_past_5_games_diff', 'lose_momentum_past_3_games_diff'],\n",
        "      dtype='object')"
       ]
      },
@@ -112,17 +117,21 @@
        "       'cc_crossing_diff', 'cc_passing_diff', 'cc_shooting_diff',\n",
        "       'd_aggresion_diff', 'd_pressure_diff', 'd_width_diff', 'home_win',\n",
        "       'home_win_no_pk', 'Group', 'gdp_diff', 'is_home', 'raw_gdp_diff',\n",
-       "       'prev_champ', 'score_past_2_games_diff',\n",
-       "       'score_conceded_past_5_games_diff', 'score_past_4_games_diff',\n",
-       "       'wins_past_2_games_diff', 'score_past_3_games_diff',\n",
-       "       'wins_past_4_games_diff', 'score_conceded_past_3_games_diff',\n",
-       "       'score_conceded_past_1_games_diff', 'score_past_1_games_diff',\n",
-       "       'score_conceded_past_4_games_diff', 'score_past_5_games_diff',\n",
-       "       'wins_home_against_away_3_games', 'wins_past_3_games_diff',\n",
-       "       'wins_past_1_games_diff', 'wins_home_against_away_2_games',\n",
-       "       'wins_home_against_away_4_games', 'wins_past_5_games_diff',\n",
-       "       'wins_home_against_away_5_games', 'wins_home_against_away_1_games',\n",
-       "       'score_conceded_past_2_games_diff'],\n",
+       "       'score_past_2_games_diff', 'score_past_4_games_diff', 'y_rating',\n",
+       "       'score_conceded_past_1_games_diff', 'win_momentum_past_5_games_diff',\n",
+       "       'score_conceded_past_4_games_diff', 'wins_past_3_games_diff',\n",
+       "       'wins_past_5_games_diff', 'wins_home_against_away_1_games',\n",
+       "       'score_past_3_games_diff', 'wins_past_4_games_diff',\n",
+       "       'win_momentum_past_2_games_diff', 'score_conceded_past_3_games_diff',\n",
+       "       'x_rating', 'score_past_1_games_diff', 'wins_home_against_away_3_games',\n",
+       "       'win_momentum_past_1_games_diff', 'wins_home_against_away_4_games',\n",
+       "       'score_conceded_past_2_games_diff', 'wins_past_2_games_diff',\n",
+       "       'lose_momentum_past_1_games_diff', 'lose_momentum_past_4_games_diff',\n",
+       "       'score_past_5_games_diff', 'lose_momentum_past_5_games_diff',\n",
+       "       'lose_momentum_past_2_games_diff', 'win_momentum_past_4_games_diff',\n",
+       "       'win_momentum_past_3_games_diff', 'wins_past_1_games_diff',\n",
+       "       'wins_home_against_away_2_games', 'wins_home_against_away_5_games',\n",
+       "       'score_conceded_past_5_games_diff', 'lose_momentum_past_3_games_diff'],\n",
        "      dtype='object')"
       ]
      },
@@ -474,9 +483,9 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    6.7s\n",
-      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   25.5s\n",
-      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   35.5s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    6.2s\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   23.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   30.4s finished\n"
      ]
     }
    ],
@@ -539,9 +548,9 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    4.5s\n",
-      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   18.9s\n",
-      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   23.5s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    3.7s\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   13.8s\n",
+      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   17.9s finished\n"
      ]
     }
    ],
@@ -559,15 +568,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XGBoost Train Score: 0.5115359261700725\n",
-      "XGBoost Validation Score 0.5552631578947368\n"
+      "XGBoost Train Score: 0.5095583388266315\n",
+      "XGBoost Validation Score 0.5578947368421052\n"
      ]
     }
    ],
@@ -576,8 +585,8 @@
     "score[\"XGBoost\"]['model'] = xgb_model\n",
     "score[\"XGBoost\"][\"Train Score\"] = xgb_model.score(X_train, y_train)\n",
     "score[\"XGBoost\"][\"Validation Score\"] = xgb_model.score(X_validation, y_validation)\n",
-    "print(\"XGBoost Train Score: {}\".format(score[\"Random Forest\"][\"Train Score\"]))\n",
-    "print(\"XGBoost Validation Score {}\".format(score[\"Random Forest\"][\"Validation Score\"]))"
+    "print(\"XGBoost Train Score: {}\".format(score[\"XGBoost\"][\"Train Score\"]))\n",
+    "print(\"XGBoost Validation Score {}\".format(score[\"XGBoost\"][\"Validation Score\"]))"
    ]
   },
   {
@@ -701,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
