--- a/models/baseline_model.ipynb
+++ b/models/baseline_model.ipynb
@@ -391,9 +391,9 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    5.8s\n",
-      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   20.8s\n",
-      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   28.0s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    7.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   27.6s\n",
+      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   37.1s finished\n"
      ]
     }
    ],
@@ -456,9 +456,9 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    3.7s\n",
-      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   14.0s\n",
-      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   18.2s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    4.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   15.5s\n",
+      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   21.0s finished\n"
      ]
     }
    ],
@@ -626,7 +626,9 @@
     "\n",
     "In the second approach, we will predict the outcome at the end of the match; for a playoff match, if the model predicts a draw as most likely, then we instead predict the second most likely outcome of that match. We will call this approach the \"Softmax Approach\". \n",
     "\n",
-    "The third approach also attempts to predict the outcome at the end of the match. Instead of just predicting the second most likely outcome for a playoff match, we instead just train another model specifically on past World Cup playoff matches on the final outcome of these matches. We then just use this model to predict the playoff matches while the model trained on the training set will predict the preliminaries match. The third approach should be the more robust approach compared to the second approach. Since we have limited amount of past World Cup playoff matches (only 24 matches because some of them were removed to accomodate the team ratings dataset), we will train a basic logistic regression model as this model. We will call this approach the \"WC Playoff Model\". \n"
+    "The third approach also attempts to predict the outcome at the end of the match. Instead of just predicting the second most likely outcome for a playoff match, we instead just train another model specifically on past World Cup playoff matches on the final outcome of these matches. We then just use this model to predict the playoff matches while the model trained on the training set will predict the preliminaries match. The third approach should be the more robust approach compared to the second approach. Since we have limited amount of past World Cup playoff matches (only 24 matches because some of them were removed to accomodate the team ratings dataset), we will train a basic logistic regression model as this model. We will call this approach the \"WC Playoff Model\". \n",
+    "\n",
+    "The implementation for the second and third approach are very straightforward and can be found [here](predict_test_data.py).\n"
    ]
   },
   {
