--- a/doc/summary.ipynb
+++ b/doc/summary.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "In this project we explored the idea of predicting the 2018 World Cup through a data science approach. We collected data related to matches, team ratings, and FIFA rankings. We use as our training set the matches played by national teams starting from 2006. However, due to limitations of the team ratings dataset, we had to get rid of many matches when merging with the matches dataset with the team ratings dataset. The training set has three outcomes, home team loses, draw, and home team wins. Although the dataset designates one team as home team, in most cases this does not mean anything and one can switch home team and away team. As a result, any feature we use will have to be symmetric in nature. \n",
     "\n",
-    "Due to the elimination style during playoffs of the World Cup, there are no draws in these playoff matches. We attempted different approaches to predicting the outcome of theese playoff matches. The first approach is to predict the outcome at 90 minutes (when a regular game ends so that our train set and test set are more \"similar\" to each other) before accounting for penalty kicks and overtime, allowing the model which trained on the training set to also predict draws in the playoff matches of the World Cup. In the second approach, we predicted the outcome at the end of the match; for a playoff match, if the model predicts a draw as most likely, then we instead predict the second most likely outcome of that match. The third approach also attempts to predict the outcome at the end of the match. Instead of just predicting the second most likely outcome for a playoff match, we instead just train another model specifically on past World Cup playoff matches on the final outcome of these matches; we then just use this model to predict the playoff matches while the model trained on the training set will predict the preliminaries match. The third approach should be the more robust approach compared to the second approach. \n",
+    "Due to the elimination style during playoffs of the World Cup, there are no draws in these playoff matches. We attempted different approaches to predicting the outcome of theese playoff matches. The first approach is to predict the outcome at 90 minutes (when a regular game ends so that our train set and test set are more \"similar\" to each other) before accounting for penalty kicks and overtime, allowing the model which trained on the training set to also predict draws in the playoff matches of the World Cup. In the second approach, we predicted the outcome at the end of the match; for a playoff match, if the model predicts a draw as most likely, then we instead predict the second most likely outcome of that match. The third approach also attempts to predict the outcome at the end of the match. Instead of just predicting the second most likely outcome for a playoff match, we instead just train another model specifically on past World Cup playoff matches on the final outcome of these matches; we then just use this model to predict the playoff matches while the model trained on the training set will predict the preliminaries match. \n",
     "\n",
     "We wanted to see just how reliable FIFA rankings are in determining the outcome of a match, so we built a baseline model consisting of just FIFA rankings, attack ratings, defense ratings, midfield ratings, and overall ratings of the teams. We tried out a variety of classification methods such as logistic regression, linear discriminant analysis, quadratic discriminant analysis, random forest, and XGBoost, using cross-validation to train on the models and ultimately selecting the model with the highest validation accuracy. With this model, we achieved decent predictions on the 2018 World Cup. Also, with the baseline model, we realized that FIFA rankings do not have that much of an impact on the outcome of the matches, indicating that a model without FIFA rankings can achieve better results than the baseline model if we feature engineer good features.\n",
     "\n",
@@ -29,6 +29,13 @@
     "\n",
     "This project proves that there is a lot of potential for the field to expand. There is no doubt in the future we will see teams rely heavily on analytics to make decision, just like how baseball, basketball and American football do in the current era. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
