--- a/EDA-PCA.ipynb
+++ b/EDA-PCA.ipynb
@@ -968,9 +968,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ac209a]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ac209a-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
