--- a/doc/related_works.ipynb
+++ b/doc/related_works.ipynb
@@ -11,18 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As mentioned before, soccer analytics is not a well-established field. However, some have attempted to model the 2018 World Cup using machine learning techniques.\n",
+    "Even though soccer analytics is not a well-established field, there are a number of attempts to model the 2018 World Cup using machine learning techniques.\n",
     "\n",
-    "For example, Andreas Groll and his team at the University of Dortmound utilized [Poisson regression, random forest, and ranking methods](https://arxiv.org/abs/1806.03208) to simulate the World Cup 100,000 times. Features that Groll used \"include economic factors such as a country’s GDP and population, FIFA’s ranking of national teams, and the properties of the teams themselves, such as their average age, the number of Champions League players they have, whether they have home advantage, and so on.\" (https://www.technologyreview.com/s/611397/machine-learning-predicts-world-cup-winner/) Through these simulations, Groll's model predicted Spain as the most likely winner of the World Cup followed by Germany. \n",
+    "For example, Andreas Groll and his team at the University of Dortmund utilized [Poisson regression, random forest, and ranking methods](https://arxiv.org/abs/1806.03208) to simulate the World Cup 100,000 times. Features that Groll used \"include economic factors such as a country’s GDP and population, FIFA’s ranking of national teams, and the properties of the teams themselves, such as their average age, the number of Champions League players they have, whether they have home advantage, and so on.\" (https://www.technologyreview.com/s/611397/machine-learning-predicts-world-cup-winner/) Through these simulations, Groll's model predicted Spain as the most likely winner of the World Cup followed by Germany. We all know how that turned out...\n",
+    "\n",
+    "![](https://img-9gag-fun.9cache.com/photo/aN1OQ1b_700bwp.webp)\n",
     "\n",
     "\n",
-    "Similarly, Gerald Muriuki utilized [logistic regression](https://scotch.io/@itsmuriuki/predicting-fifa-world-cup-2018-using-machine-learning) to simulate the World Cup. Using the historic match dataset as his train set, Muriuki only trained on matches in which both teams are playing in the 2018 World Cup. The only feature he used was one-hot encoding all the teams, essentially representing a team's past performance against the other teams as a feature. The model predicted Brazil as the most likely winner.\n",
+    "Similarly, Gerald Muriuki utilized [logistic regression](https://scotch.io/@itsmuriuki/predicting-fifa-world-cup-2018-using-machine-learning) to simulate the World Cup. Using the historic match dataset as his train set, Muriuki only trained on matches in which both teams are playing in the 2018 World Cup. The only feature he used was one-hot encoding all the teams, essentially representing a team's past performance against the other teams as a feature. The model predicted Brazil as the most likely winner. \n",
     "\n",
     "Finally, Rodrigo Nader utilized [SVM](https://towardsdatascience.com/using-machine-learning-to-simulate-world-cup-matches-959e24d0731) to simulate the World Cup. Nader used ratings (Atk, Mid, Def, ovr) about the teams scraped from Fifa Index to build his model. The model predicted Spain as the most likely winner, defeating Brazil in the finals.\n",
     "\n",
-    "As we can see, there were many attempts before the World Cup to predict it, with Spain or Brazil prevailing in most cases. However, we could not find any works reflecting back on the actual results of the World Cup to see what was the most common error.\n",
+    "As we can see, there were many attempts before the World Cup to predict it, with Spain or Brazil prevailing in most cases. However, we did not find any existing work that modelled World Cup 2018 after it had ended. While this may result in some hindsight bias (which we actively tried to avoid), there is still great value in reflecting back on the actual results of the World Cup. This would not only give us some insights into the actual statistics that matter in determining a soccer match, but also provide us with a model that could possibly be applied to future soccer matches. \n",
     "\n",
-    "It is evident that the data we chose to use and features we chose to engineer were inspired by the related works. We hope to combine the features used individually by these related works to make a model of our own."
+    "Moreover, as mentioned previously, we model the World Cup based on individual matches for comparability. This is different from the simulation models done previously, which simulates the World Cup sequentially. Nonetheless, our existing model can be extended to predict matches sequentially, although there is not much value in doing so since World Cup 2018 has ended.  \n",
+    "\n",
+    "Nonetheless, it is evident that the data we chose to use and the features we chose to engineer were inspired by the related works. We hope to combine the features used individually by these related works to make a model of our own."
    ]
   }
  ],
@@ -42,7 +46,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
