--- a/models/beyond_baseline.ipynb
+++ b/models/beyond_baseline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,13 +40,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "train = pd.read_csv('../data/cleaned/train_final.csv')\n",
     "test = pd.read_csv('../data/cleaned/test_final.csv')\n",
     "wc_playoffs_train = pd.read_csv('../data/cleaned/wc_playoffs_final.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['game_date', 'home_team', 'away_team', 'home_score', 'away_score',\n",
+       "       'tournament', 'country', 'neutral', 'overall_diff',\n",
+       "       'attack_away_defence_home_diff', 'attack_diff',\n",
+       "       'attack_home_defence_away_diff', 'defence_diff', 'midfield_diff',\n",
+       "       'rank_diff', 'prestige_diff', 'growth_diff', 'full_age_diff',\n",
+       "       'start_age_diff', 'value_euros_millions_diff',\n",
+       "       'wage_euros_thousands_diff', 'goalkeeper_overall_diff',\n",
+       "       'bup_dribbling_diff', 'bup_passing_diff', 'bup_speed_diff',\n",
+       "       'cc_crossing_diff', 'cc_passing_diff', 'cc_shooting_diff',\n",
+       "       'd_aggresion_diff', 'd_pressure_diff', 'd_width_diff', 'home_win',\n",
+       "       'x_rating', 'y_rating', 'gdp_diff', 'is_home', 'raw_gdp_diff',\n",
+       "       'wins_past_1_games_diff', 'win_momentum_past_1_games_diff',\n",
+       "       'lose_momentum_past_2_games_diff', 'lose_momentum_past_4_games_diff',\n",
+       "       'wins_home_against_away_5_games', 'wins_past_5_games_diff',\n",
+       "       'wins_past_3_games_diff', 'wins_home_against_away_4_games',\n",
+       "       'lose_momentum_past_3_games_diff', 'lose_momentum_past_1_games_diff',\n",
+       "       'win_momentum_past_3_games_diff', 'wins_home_against_away_3_games',\n",
+       "       'wins_past_2_games_diff', 'win_momentum_past_2_games_diff',\n",
+       "       'wins_past_4_games_diff', 'wins_home_against_away_2_games',\n",
+       "       'wins_home_against_away_1_games', 'lose_momentum_past_5_games_diff',\n",
+       "       'win_momentum_past_5_games_diff', 'win_momentum_past_4_games_diff'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.columns"
    ]
   },
   {
@@ -1706,7 +1747,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
