feature desc changes

--- a/doc/data_description.ipynb
+++ b/doc/data_description.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "| Feature Name        | Description           | Data Type  |\n",
     "| ------------- |:---------------------------:| -----:|\n",
-    "| home_win      | 1 indicates team 1 wins; -1 team 2 wins; 0 tie | Categorical (-1, 0, 1) |\n",
+    "| is_home      | indicates whether a team has home team advantage (host or same continent as host) | Categorical (-1, 0, 1) |\n",
     "| attack_diff      | difference in team attack ratings | Float |\n",
     "| bup_dribbling_diff      | difference in quality of dribbling | Float |\n",
     "| bup_passing_diff      | difference in quality of passing distance and support from teammates | Float |\n",
@@ -96,20 +96,38 @@
     "| attack_home_defence_away_diff      | Team 1's attack ratings - Team 2's defense ratings | Float |\n",
     "| attack_away_defence_home_diff      | Team 2's attack ratings - Team 1's defense ratings | Float |\n",
     "| rank_diff      | difference in teams' FIFA rankings | Float |\n",
-    "| gdp_diff      | difference in GDP within the same continent | Float |\n",
-    "| raw_gdp_diff      | difference in ??? | Float |\n",
-    "| win_momentum_past_1_games_diff     | difference in ??? | Float |\n",
-    "| win_momentum_past_2_games_diff      | difference in ??? | Float |\n",
-    "| win_momentum_past_3_games_diff       | difference in ??? | Float |\n",
-    "| win_momentum_past_4_games_diff       | difference in ??? | Float |\n",
-    "| win_momentum_past_5_games_diff       | difference in ??? | Float |\n",
-    "| lose_momentum_past_1_games_diff      | difference in ??? | Float |\n",
-    "| lose_momentum_past_2_games_diff    | difference in ??? | Float |\n",
-    "| lose_momentum_past_3_games_diff     | difference in ??? | Float |\n",
-    "| lose_momentum_past_4_games_diff     | difference in ??? | Float |\n",
-    "| lose_momentum_past_5_games_diff      | difference in ??? | Float |\n",
+    "| gdp_diff      | log of difference in GDP if within the same continent | Float |\n",
+    "| raw_gdp_diff      | difference between GDP | Float |\n",
+    "| win_momentum_past_1_games_diff     | difference in win momentum of the past game | Float |\n",
+    "| win_momentum_past_2_games_diff      | difference in win momentum of the past 2 games | Float |\n",
+    "| win_momentum_past_3_games_diff       | difference in win momentum of the past 3 games | Float |\n",
+    "| win_momentum_past_4_games_diff       | difference in win momentum of the past 4 games | Float |\n",
+    "| win_momentum_past_5_games_diff       | difference in win momentum of the past 5 games | Float |\n",
+    "| lose_momentum_past_1_games_diff      | difference in lose momentum of the past game | Float |\n",
+    "| lose_momentum_past_2_games_diff    | difference in lose momentum of the past 2 games | Float |\n",
+    "| lose_momentum_past_3_games_diff     | difference in lose momentum of the past 3 games | Float |\n",
+    "| lose_momentum_past_4_games_diff     | difference in lose momentum of the past 4 games | Float |\n",
+    "| lose_momentum_past_5_games_diff      | difference in lose momentum of the past 5 games | Float |\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below is our response variable.\n",
+    "\n",
+    "| Column Name        | Description           | Data Type  |\n",
+    "| ------------- |:---------------------------:| -----:|\n",
+    "| home_win      | 1 indicates team 1 wins; -1 team 2 wins; 0 tie | Categorical (-1, 0, 1) |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -128,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
