--- a/doc/data_description.ipynb
+++ b/doc/data_description.ipynb
@@ -22,16 +22,20 @@
     "**Player and team statistics:** Player and team based statistics, such as ratings, positional data and wages for the former and playing style for the latter, was scraped from [sofifa](https://sofifa.com). sofifa is a website that collects from the FIFA game databases and has historical data from FIFA 2007, released on September 25, 2006. Earlier FIFA versions were released without frequent updates. However, starting from FIFA 2013, the game was frequently updated throughout the year to account for player and team improvements. As such, prior to 2013, we do not have various data points for each year. Nonetheless, this is not a huge issue as in-game data do not vary largely within a specific game edition. It is thus reasonable to extrapolate throughout the year. \n",
     "\n",
     "![](http://www.fifaworldcupnews.com/wp-content/uploads/2018/04/FIFA-Video-Game-Series-history-cover.jpg)\n",
+    "<center>Source: http://www.fifaworldcupnews.com/wp-content/uploads/2018/04/FIFA-Video-Game-Series-history-cover.jpg</center>\n",
     "\n",
     "The sofifa dataset also does not include all national teams. Moreover, different sets of national teams are included for each FIFA game edition. This does not pose a problem for 'better', more popular teams as they are generally included in all games by demand. However, alot of national teams are generally not included because they are not deemed 'popular' enough to be selected by gamers. As such, we lose alot of matches (where a match is an observation in our full dataset) by merging the sofifa dataset with our match-based dataset. This is again not a huge problem because we still end up with around 1800+ matches, which we deemed to be sufficient for our analysis. We noted that a small number of prior World Cup matches were removed because some of the teams that were in prior World Cups were not inclued in the game (i.e. Ghana and Slovakia in World Cup 2010). Thankfully, there was a World Cup 2018 game update to the FIFA 2018 game edition that ensured that we have the necessary data for our test set.\n",
     "\n",
     "Moreover, even the national teams that are included are not particularly accurate with the list of squad players. The sofifa dataset roughly approximates the list of players that are often called up by their national teams. Even the World Cup 2018 game update did not have the exact World Cup roster for all the teams!\n",
     "\n",
     "![](https://www.thesun.co.uk/wp-content/uploads/2018/05/wrong-6.jpg?strip=all&quality=100&w=742&h=417&crop=1)\n",
+    "<center>Source: https://www.thesun.co.uk/wp-content/uploads/2018/05/wrong-6.jpg?strip=all&quality=100&w=742&h=417&crop=1</center>\n",
     "\n",
     "It might seem that feature engineering on individual player statistics, as compared to using the aggregated team statistics, might give us greater flexibility. As such, we nonetheless went ahead with trying to match player names with match squad data. However, as there were different naming conventions across different datasets for players' name, we found that it would be difficult to accurately match player names without some extensive manual curation. Moreover, this would yield minimal benefit for many of the features according to our EDA (see EDA section for details). As such, we relied on a mix of existing team statistics and some aggregated summary statistics of individual players data for each team to approximate the talent available in each team. While the in-game squad data is not particularly accurate, since we are already approximating the strength of a team through aggregation, it is not a huge issue. Moreover, as we shall see, our approximation does reasonably well.\n",
     "\n",
-    "While the sofifa dataset has its limitations, it is the most comprehensive, and readily available dataset on soccer statistics. As such, the dataset is the main complement to our match-based data.\n",
+    "But how does EA Sports (the company that produces the line of FIFA games) calculate all the in-game player statistics? This is a common question often posed by serious gamers who don't necessarily agree with the statistics given to their favorite players. In fact, EA Sports has a team that includes professional scouts, coaches and club season ticket holders throughout the world that is responsible for collecting and then submitting feedback on players. These millions pieces of information are then compiled together to create players' attributes. While there will always be debates about the accuracy of a player's attributes, the data collection by EA Sports is by far the most professional and comprehensive. \n",
+    "\n",
+    "As such, despite the limitations of the sofifa dataset, it is the most comprehensive, and readily available dataset on soccer statistics. We thus use the dataset as the main complement to our match-based data.\n",
     "\n",
     "We also experimented with data from other sources, such as [European matches](https://www.kaggle.com/hugomathien/soccer).\n",
     "\n",
@@ -55,10 +59,9 @@
     "\n",
     "4. **Statistics of players:** We aggregate players' statistics together as part of a team's offensive, defensive abilities. One exception is the goalkeepers' ratings, as we believe that defense is pivotal for any good team. Good goalkeepers can potentially swing the outcome of a match. As such, we single out goalkeepers' ratings and include them as part of the features.\n",
     "\n",
-    "<table><tr>    \n",
-    "<td> <img src=\"https://www.straitstimes.com/sites/default/files/styles/article_pictrure_780x520_/public/articles/2018/06/29/ST_20180629_FDKOREANS290A8P_4097009.jpg?itok=a3Ffr9IV&timestamp=1530212009\" width=\"50%\"/> </td>\n",
-    "<td> <img src=\"https://66.media.tumblr.com/5bef2a2e7230d97d4753cc251289ee95/tumblr_pazvs9HVL91tovmb9o1_500.jpg\" width=\"50%\"/> </td>\n",
-    "</tr></table>\n",
+    "\n",
+    "![](https://static.businessinsider.com/image/53b4538a69bedd0476e18533-750.jpg)\n",
+    "<center>Source: https://static.businessinsider.com/image/53b4538a69bedd0476e18533-750.jpg</center>\n",
     "\n",
     "\n",
     "5. **GDP within the same continent:** Rather than considering the overall GDP difference, GDP difference within the confederation seems a better indicator of how well a team is doing against another. Confederations tend to be on the same continent, so we compare the GDPs of countries on the same continents. When not in the same continent, this is encoded again with 0 to indicate the lack of information which neither advantages nor disadvantage any team."
@@ -121,13 +124,6 @@
     "| ------------- |:---------------------------:| -----:|\n",
     "| home_win      | 1 indicates team 1 wins; -1 team 2 wins; 0 tie | Categorical (-1, 0, 1) |"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -146,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
