--- a/doc/related_works.ipynb
+++ b/doc/related_works.ipynb
@@ -15,8 +15,8 @@
     "\n",
     "For example, Andreas Groll and his team at the University of Dortmund utilized [Poisson regression, random forest, and ranking methods](https://arxiv.org/abs/1806.03208) to simulate the World Cup 100,000 times. Features that Groll used \"include economic factors such as a country’s GDP and population, FIFA’s ranking of national teams, and the properties of the teams themselves, such as their average age, the number of Champions League players they have, whether they have home advantage, and so on.\" (https://www.technologyreview.com/s/611397/machine-learning-predicts-world-cup-winner/) Through these simulations, Groll's model predicted Spain as the most likely winner of the World Cup followed by Germany. We all know how that turned out...\n",
     "\n",
-    "![](https://img-9gag-fun.9cache.com/photo/aN1OQ1b_700bwp.webp)\n",
-    "\n",
+    "![](https://i.ytimg.com/vi/ITlBUIWlsXQ/maxresdefault.jpg)\n",
+    "<center>Source: https://i.ytimg.com/vi/ITlBUIWlsXQ/maxresdefault.jpg</center>\n",
     "\n",
     "Similarly, Gerald Muriuki utilized [logistic regression](https://scotch.io/@itsmuriuki/predicting-fifa-world-cup-2018-using-machine-learning) to simulate the World Cup. Using the historic match dataset as his train set, Muriuki only trained on matches in which both teams are playing in the 2018 World Cup. The only feature he used was one-hot encoding all the teams, essentially representing a team's past performance against the other teams as a feature. The model predicted Brazil as the most likely winner. \n",
     "\n",
