updated momentum & gdp descriptions

--- a/doc/data_description.ipynb
+++ b/doc/data_description.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "We also experimented with data from other sources, such as [European matches](https://www.kaggle.com/hugomathien/soccer).\n",
     "\n",
-    "**Country statistics:** Inspired by the prior World-Cup prediction model that we reviewed by Andreas Groll and his team at the University of Dortmund, we also scraped some country information from Wikipedia such as [GDP PPP](https://en.wikipedia.org/wiki/List_of_countries_by_GDP_(PPP)) and [population](https://en.wikipedia.org/wiki/List_of_countries_by_population_(United_Nations)).\n"
+    "**Country statistics:** Inspired by the prior World-Cup prediction model that we reviewed by Andreas Groll and his team at the University of Dortmund, we also scraped some country information from Wikipedia such as [GDP PPP](https://en.wikipedia.org/wiki/List_of_countries_by_GDP_(PPP)).\n"
    ]
   },
   {
@@ -54,7 +54,9 @@
     "2. **Missing value representation:** Some of the data that we rely on are based upon the FIFA in-game statistics stored on sofifa.com. As they only have statistics from FIFA 2006 onwards, our training data starts from 2006. This nicely matches wth the FIFA World Ranking model that we are comparing with. Importantly, we note that the value and wages data is missing for less renowned players. In the soccer job market, top players in European leagues earn substantially more than other soccer players. As such, it makes sense to impute the missing value and wages as 0 to capture the disparity in wages. For the remaining missing values, we imputed them with 0 as our data is represented in differences between 2 teams, and 0 encodes the lack of information which neither advantages nor disadvantages either team. \n",
     "\n",
     "\n",
-    "3. **Momentum:** In sports, we often notice that one team tends to keep winning or keep losing as they gain momentum due to teams' morale, conditions and other factors. This can be represented by taking into account the team's performance in past games. We engineered a couple of momentum-based statistics by looking at the number of wins, goals scored, and goals conceded in their past few games. We also experimented with weighing some of these momentum-based statistics by taking into account the rating of the teams the team played in. This is slightly alike the FIFA World Rankings and is our attempt to capture similar information from our data.\n",
+    "3. **Momentum:** In sports, we often notice that one team tends to keep winning or keep losing as they gain momentum due to teams' morale, conditions and other factors. This can be represented by taking into account the team's performance in past games. We engineered momentum by taking the opposing team's strength into account and recording the winning and losing momentum in the past n games. This is slightly alike the FIFA World Rankings and is our attempt to capture similar information from our data.  More specifically, the winning momentum is calculated by adding up the normalized rating of the opponent in each win and the losing momentum is done by summing up -(1)(1 - normalized rating). These expressions model the momentum well since a win against a highly rated team will impact the value of winning momentum by a lot while a loss against a highly rated team will impact the losing momentum only by a little bit (as it should be in real life). Moreover, we decided to split momentum into win and loss momentums instead of summing them up and combining them into one feature. This is because if we were to make it into one feature, then winning against a strong team and then losing against a weak team would cancel each other out arithmetically, when in reality, the momentum from the win/loss outcomes may not be symmetrical.\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "4. **Statistics of players:** We aggregate players' statistics together as part of a team's offensive, defensive abilities. One exception is the goalkeepers' ratings, as we believe that defense is pivotal for any good team. Good goalkeepers can potentially swing the outcome of a match. As such, we single out goalkeepers' ratings and include them as part of the features.\n",
@@ -64,7 +66,7 @@
     "<center>Source: https://static.businessinsider.com/image/53b4538a69bedd0476e18533-750.jpg</center>\n",
     "\n",
     "\n",
-    "5. **GDP within the same continent:** Rather than considering the overall GDP difference, GDP difference within the confederation seems a better indicator of how well a team is doing against another. Confederations tend to be on the same continent, so we compare the GDPs of countries on the same continents. When not in the same continent, this is encoded again with 0 to indicate the lack of information which neither advantages nor disadvantage any team."
+    "5. **GDP information:** We realize that GDP per capita of countries can contribute to the strength of each team since a richer country may be able to afford better training equipments and resources. Moreover, we believe that the comparison of GDP per capita within the same region captures this information even better since wealth differences in similar conditions may impact the availability of resources even more. Therefore, on top of recording the raw difference in GDP of 2 teams, we also record the difference between GDP of countries within the same continent (calculated by using log of team1_gdp/team2_gdp). When not in the same continent, this is encoded again with 0 to indicate the lack of information which neither advantages nor disadvantage any team. We obtain a mapping of a country to its continent by scraping wikipedia."
    ]
   },
   {
@@ -142,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
